--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,7 +48,7 @@
             <a href=" /suppliers"><span class="fa fa-address-book mr-3""></span>Fornecedores</a>
           </li>
           <li>
-            <a href=" #"><span class="fa fa-sign-out mr-3"></span>Logout</a>
+            <a href="/logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
         </li>
       </ul>
 
