--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -268,7 +268,7 @@
                 <div hidden class="custom-control custom-checkbox custom-control-inline">
                   <input id="chk1" type="checkbox" name="chk" class="custom-control-input"> <label for="chk1" class="custom-control-label text-sm">Lembrar-me</label>
                 </div>
-                <a class="ml-auto mb-0 text-sm" data-toggle="modal" data-target="#validaEmail" data-whatever="@mdo">Esqueceu a senha?</a>
+                <a href="/recover/sendmail" class="ml-auto mb-0 text-sm" data-toggle="modal" data-target="#validaEmail" data-whatever="@mdo">Esqueceu a senha?</a>
               </div>
               <div class="row mb-3 px-3">
                 <button type="submit" class="btn btn-blue text-center">Login</button>
