--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
       <h1><a href="/" class="logo">Compras</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="/dashboard"><span class="fa fa-user mr-3"></span> Fulano Pereira</a>
+          <a href="/dashboard"><span class="fa fa-user mr-3"></span>Usuário</a>
         </li>
         <li>
           <a href="/dashboard"><span class="fa fa-home mr-3"></span> Dashboard</a>
