--- a/views/registrationsToken/index.ejs
+++ b/views/registrationsToken/index.ejs
@@ -12,7 +12,8 @@
         <option value="6">Gestor</option>
         <option value="7">Diretor</option>
         <option value="8">Compras</option>
-        <option value="9">Finaceiro</option>
+        <option value="9">Financeiro</option>
+        <option value="10">T.I</option>
       </select>
     </div>
   </div>
