--- a/views/payments/index.ejs
+++ b/views/payments/index.ejs
@@ -1,5 +1,214 @@
 <%-  include('../partials/header.ejs') %>
 
-<h2>Pagamentos</h2>
+<h2 class='mb-4'>Autorização de Pagamentos Diversos</h2>
+<form id="guru" action="upload" method="post" enctype="multipart/form-data" accept-charset="utf-8">
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputText">Fornecedor</label>
+      <select name="fornecedor" class="form-control" required>
+        <option value="" disabled="disabled" selected="selected" required>Selecione o Fornecedor</option>
+        <option value='Fornecedor1'>Fornecedor1</option>
+        <option value='Fornecedor1'>Fornecedor2</option>
+        <option value='Fornecedor1'>Fornecedor3</option>
+        <option value='Fornecedor1'>Fornecedor4</option>
+      </select>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputText">Empresa</label>
+      <select name="empresa" class="form-control" required>
+        <option value="" disabled="disabled" selected="selected" required>Selecione a Empresa</option>
+        <option value='Empresa1'>Empresa1</option>
+        <option value='Empresa1'>Empresa2</option>
+        <option value='Empresa1'>Empresa3</option>
+        <option value='Empresa1'>Empresa4</option>
+      </select>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Descrição</label>
+    <textarea name="descricao" class="form-control" id="exampleFormControlTextarea1" rows="6" required placeholder="Descreva sobre o pagamento"></textarea>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Vencimento</label>
+      <input name="vencimento" type="text" class="form-control" id="vencimento" required placeholder="Informe o vencimento">
+      <script>
+        $("#vencimento").mask("00/00/0000");
+      </script>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputText">Valor</label>
+      <input name="valor" type="text" class="form-control" id="valor" required placeholder="Informe o valor">
+      <script>
+        $('#valor').maskMoney({
+          prefix: 'R$ ',
+          allowNegative: true,
+          thousands: '.',
+          decimal: ',',
+          affixesStay: true
+        });
+      </script>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Formas de Pagamento</label>
+    <select id="sl" class="form-control" id="exampleFormControlSelect1" required>
+      <option value="">Selecione</option>
+      <option value="Boleto">Boleto</option>
+      <option value="Á vista">Á vista</option>
+      <option value="Depósito">Depósito</option>
+      <option value="Pix">Pix</option>
+    </select>
+  </div>
+  <div id="formadePagamento">
+
+  </div>
+
+  <div id="chavesPix">
+
+  </div>
+
+  <script type="text/javascript">
+    $.jMaskGlobals.watchDataMask = true;
+
+    $("#sl").on("change", function() {
+      var valor = $(this).val(); // aqui vc pega cada valor selecionado com o this
+      if (valor == "Depósito") {
+        document.getElementById("chavesPix").innerHTML = "";
+        document.getElementById("formadePagamento").innerHTML = "" +
+          "<input hidden name='deposito' type='text' class='form-control' id='inputEmail4' value='deposito'>\n" +
+          "<div class='form-row'>\n" +
+          "<div class='form-group col-md-3'>\n" +
+          "<label for='inputEmail4'>Banco</label>\n" +
+          "<input name='banco' type='text' class='form-control' id='inputEmail4' required placeholder='Informe o Banco'>\n" +
+          "</div>\n" +
+          "<div class='form-group col-md-3'>\n" +
+          "<label for='inputText'>Agência</label>\n" +
+          "<input name='agencia' type='text' class='form-control' id='inputPassword4' data-mask='0000'  required placeholder='Informe a agência'>\n" +
+          "</div>\n" +
+          "<div class='form-group col-md-3'>\n" +
+          "<label for='inputText'>Conta Corrente</label>\n" +
+          "<input name='contacorrente' type='text' class='form-control' id='inputPassword4' data-mask='00000000-0' required placeholder='Informe a conta corrente'>\n" +
+          "</div>\n" +
+          "</div>\n";
+
+      } else if (valor == "Pix") {
+        document.getElementById("formadePagamento").innerHTML = "";
+        document.getElementById("chavesPix").innerHTML = "" +
+          "<input hidden name='pix' type='text' class='form-control' id='inputEmail4' value='pix'>\n" +
+          "<div class='form-group'>\n" +
+          "<label for='exampleFormControlSelect1'>Chaves Pix</label>\n" +
+          "<select id='selectPix' class='form-control' id='exampleFormControlSelect1' required>\n" +
+          "<option value=''>Selecione</option>\n" +
+          "<option value='CPF'>CPF</option>\n" +
+          "<option value='CNPJ'>CNPJ</option>\n" +
+          "<option value='EMAIL'>EMAIL</option>\n" +
+          "<option value='TELEFONE'>TELEFONE</option>\n" +
+          "</select>\n" +
+          "</div>\n";
+
+        $("#selectPix").on("change", function() {
+          var value = $(this).val();
+          if (value == "CPF") {
+
+            document.getElementById("chavesPix").innerHTML = "" +
+              "<div class='form-group col-md-3'>\n" +
+              "<label for='inputEmail4'>CPF</label>\n" +
+              "<input name='cpf' type='text' class='form-control' id='cpf'  data-mask='000.000.000-00' required placeholder='Informe o CPF'>\n" +
+              "</div>";
+
+
+          } else if (value == "CNPJ") {
+
+            document.getElementById("chavesPix").innerHTML = "" +
+              "<div class='form-group col-md-3'>\n" +
+              "<label for='inputText'>CNPJ</label>\n" +
+              "<input name='cnpj' type='text' class='form-control' id='inputPassword4' data-mask='00.000.000/0000-00'  required placeholder='Informe o CNPJ'>\n" +
+              "</div>\n";
+
+          } else if (value == "EMAIL") {
+
+            document.getElementById("chavesPix").innerHTML = "" +
+              "<div class='form-group col-md-3'>\n" +
+              "<label for='inputText'>Email</label>\n" +
+              "<input name='email' type='text' class='form-control' id='inputPassword4' required placeholder='Informe o EMAIL'>\n" +
+              "</div>\n";
+
+          } else if (value == "TELEFONE") {
+
+            document.getElementById("chavesPix").innerHTML = "" +
+              "<div class='form-group col-md-3'>\n" +
+              "<label for='inputText'>Telefone</label>\n" +
+              "<input name='telefone' type='text' class='form-control' id='inputPassword4' data-mask='(00) 0 0000-0000'  required placeholder='Informe o TELEFONE'>\n" +
+              "</div>\n";
+          } else {
+
+            document.getElementById("chavesPix").innerHTML = "";
+
+          }
+        })
+
+      } else if (valor == "Boleto") {
+
+        document.getElementById("chavesPix").innerHTML = "";
+        document.getElementById("formadePagamento").innerHTML = "" +
+
+          "<input hidden name='boleto' type='text' class='form-control' id='inputEmail4' value='boleto'>\n";
+
+      } else if (valor == "Á vista") {
+
+        document.getElementById("chavesPix").innerHTML = "";
+        document.getElementById("formadePagamento").innerHTML = "" +
+          "<input hidden name='avista' type='text' class='form-control' id='inputEmail4' value='avista'>\n";
+
+      } else {
+
+        document.getElementById("chavesPix").innerHTML = "";
+        document.getElementById("formadePagamento").innerHTML = "";
+
+      }
+
+    })
+  </script>
+
+  <table id="principal" border="0px" width="70%">
+    <tr>
+      <td>Anexo</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+
+      <td class='col-md-2'><input type="file" name="anexo1" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" required /></td>
+
+    </tr>
+  </table>
+  <br>
+  <button type="button" class="btn btn-secondary" onclick="adicionarParcela()">+ Anexo</button></td>
+
+  <script>
+    let count = 2;
+
+    function adicionarParcela() {
+
+      $('#principal').append("<tr><td class='col-md-2'><input type='file' name='anexo" + count + "' size='50' accept='image/jpeg,image/png,image/jpg,application/pdf' required /></td>" +
+        "<td class='col-md-2'><button type='button' class='btn btn-danger btn-sm'>Excluir</button></td>");
+      count++;
+
+    }
+
+    $('#principal').on('click', 'button', function() {
+
+      var td = $(this).parent();
+      var tr = $(td).parent();
+      count--;
+      tr.remove();
+
+    });
+  </script>
+
+  <button type="submit" class="btn btn-info">Enviar</button>
+</form>
+</div>
+</div>
 
 <%- include('../partials/footer.ejs') %>
