--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -65,11 +65,11 @@
           <td><%= payment.description  %></td>
           <td><%= formattedDate  %></td>
           <td><%= payment.status  %></td>
-          <td><a href="">Detalhes</a></td>
+          <td><a href="/payments/<%= payment.id %>">Detalhes</a></td>
         </tr>
         
       <% }); 
-      
+
           purchases.forEach(purchase => {  
             // Format the date using JavaScript
             let formattedDate = new Date(purchase.createdAt).toLocaleDateString('pt-BR', {
@@ -83,7 +83,8 @@
             <td><%= purchase.justification  %></td>
             <td><%= formattedDate  %></td>
             <td><%= purchase.status  %></td>
-            <td><a href="">Detalhes</a></td>
+            <td>
+              <a href="/purchases/<%= purchase.id %>">Detalhes</a></td>
           </tr>
           
         <% }); %>
