--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -46,7 +46,7 @@
           <th scope="col">Solicitação</th>
           <th scope="col">Data</th>
           <th scope="col">Status</th>
-          <th scope="col"></th>
+          <th scope="col">Detalhes</th>
         </tr>
       </thead>
       <tbody>
