--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,10 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/style.css">
 
-<!--
-  <link rel="stylesheet" href="./css/dash.css">
   <link rel="stylesheet" href="./css/sidebar.css">
-   -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -23,6 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="./css/sidebar.css">
 </head>
 
 <body>
@@ -35,11 +33,15 @@
           <span class="sr-only">Toggle Menu</span>
         </button>
       </div>
+      <a class="navbar-brand" href="#">
+        <img src="./images/logo_oficial_sf.png" alt="">
+      </a>
 
-      <h1><a href="/" class="logo">Compras</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="/dashboard"><span class="fa fa-user mr-3"></span><%= user.employee.name %></a>
+          <a href="/dashboard"><span class="fa fa-user mr-3"></span>
+            <%= user.employee.name %>
+          </a>
         </li>
         <li>
           <a href="/dashboard"><span class="fa fa-home mr-3"></span> Dashboard</a>
@@ -60,7 +62,7 @@
             <a href=" /suppliers"><span class="fa fa-address-book mr-3""></span>Fornecedores</a>
           </li>
           <li>
-            <a href="/logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
+            <a href=" /logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
         </li>
       </ul>
     </nav>
