--- a/views/payments/show.ejs
+++ b/views/payments/show.ejs
@@ -15,7 +15,7 @@
           <td class="destaque"><strong>Fornecedor:</strong></td>
           <td><span name="fornecedor"> <%= supplier.name %> </span></td>
           <td class="destaque"><strong>Empresa:</strong></td>
-          <td><span name="empresa">SIGESC Sistemas de Gestão de Convenios</span></td>
+          <td><span name="empresa"><%= company.name %></span></td>
         </tr>
         <tr>
           <td class="destaque"><strong>Descrição:</strong></span></td>
