--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -8,7 +8,7 @@
       <div class="card-body">
         <h5 class="card-title">PENDENTES</h5>
         <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  -->
-        <a href="#" class="btn btn-warning">Visualizar <span class="badge badge-light"><%= pending %>
+        <a href="/dashboard/pending" class="btn btn-warning">Visualizar <span class="badge badge-light"><%= pending %>
           </span></a>
       </div>
     </div>
@@ -20,7 +20,7 @@
       <div class="card-body">
         <h5 class="card-title">REPROVADOS</h5>
         <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  -->
-        <a href="#" class="btn btn-danger">Visualizar <span class="badge badge-light"><%= reproved %>
+        <a href="/dashboard/reproved" class="btn btn-danger">Visualizar <span class="badge badge-light"><%= reproved %>
           </span></a>
       </div>
     </div>
@@ -31,7 +31,7 @@
       <img class="card-img-top" src="./images/aproved-rafiki.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">APROVADOS</h5>
-        <a href="#" class="btn btn-success">Visualizar <span class="badge badge-light"><%= aproved %>
+        <a href="/dashboard/aproved" class="btn btn-success">Visualizar <span class="badge badge-light"><%= aproved %>
           </span></a>
       </div>
     </div>
