--- a/views/purchaseAndServices/show.ejs
+++ b/views/purchaseAndServices/show.ejs
@@ -1,4 +1,3 @@
-
 <%-  include('../partials/header_show_purchase.ejs') %>
 
 <% 
@@ -11,47 +10,105 @@
     %>
 
 <div class="cabecalho">
-    <img src="../../images/fav-icon2-150x150.png" alt="">
-    <h1>Relatório de Compras</h1>
-    <h6>Nome: <label name="nome"> <%= employee.name %> </label></h6>
-    <p>Data: <label name="data"> <%= formattedDate %>  </label> | <label name="setor">Setor: <%= sector.description %></label></p>
+  <img src="../../images/fav-icon2-150x150.png" alt="">
+  <h1>Relatório de Compras</h1>
+  <h6>Nome: <label name="nome"> <%= employee.name %> </label></h6>
+  <p>Data: <label name="data"> <%= formattedDate %> </label> | <label name="setor">Setor: <%= sector.description %></label></p>
+</div>
+<hr>
+<br>
+<div class="conteudo">
+  <table>
+    <thead>
+      <tr>
+        <th>Quantidade</th>
+        <th>Item</th>
+        <th>Especificações</th>
+        <th>Valor</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% item.forEach(item => { %>
+      <tr>
+        <td><%= item.amount %></td>
+        <td><%= item.item %></td>
+        <td><%= item.description %></td>
+        <td><%= item.value %></td>
+      </tr>
+      <% }); %>
+    </tbody>
+  </table>
+  <div class="valor-total">
+    <label>Valor Total:</label>
+    <label name="total" id="valor-display"> <%= purchase.total %> </label>
   </div>
-  <hr>
-  <br>
-  <div class="conteudo">
-    <table>
-      <thead>
-        <tr>
-          <th>Quantidade</th>
-          <th>Item</th>
-          <th>Especificações</th>
-          <th>Valor</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% item.forEach(item => { %>
-          <tr>
-          <td><%= item.amount %></td>
-          <td><%= item.item %></td>
-          <td><%= item.description %></td>
-          <td><%= item.value %></td>
-        </tr>
-       <% }); %>
-   
-      </tbody>
-    </table>
-    <div class="valor-total">
-      <label>Valor Total:</label>
-      <label name="total" id="valor-display"> <%= purchase.total %> </label>
-    </div>
-    <div class="footer">
-      <p>Gestor: <label name="gestor">Guilherme Tollens Carvalho</label><br>
-        Email: <label name="emailgestor">guilherme.carvalho@provida.med.br</label></p>
-      <br>
-      <p>Diretor: <label name="diretor">Guilherme Tollens Carvalho</label><br>
-        Email: <label name="emaildiretor">guilherme.carvalho@provida.med.br</label></p>
-      <br>
-      <p>Data de solicitação: <label name="datasolicitacao">15/06/2024</label></p>
-    </div>
+  <div class="footer">
+    <% if(purchase.status == "Em análise pelo diretor") {%>
+    <p>Gestor: <label name="gestor"> <%= leader_employee.name %> </label><br>
+      Email: <label name="emailgestor"><%= leader_employee.email %></label></p>
+    <br>
+    <% } else if(purchase.status == "Pagamento em andamento") { %>
+    <p>Gestor: <label name="gestor"> <%= leader_employee.name %> </label><br>
+      Email: <label name="emailgestor"><%= leader_employee.email %></label></p>
+    <br>
+    <p>Diretor: <label name="diretor"> <%= director_employee.name %> </label><br>
+      Email: <label name="emaildiretor"> <%= director_employee.email %> </label></p>
+    <br>
+    <% } %>
+  </div>
 
-<%- include('../partials/footer.ejs') %>
+    <% if(user.profile.description == "leaders" && purchase.leader_id == null && purchase.director_id == null &&
+   purchase.purchase_id == null && purchase.financial_id == null ){%>
+  <div>
+    <a href="/accept/leaders/<%= purchase.id %>" class="btn btn-primary">Aceitar</a>
+    <a href="/reprove/leaders/<%= purchase.id %>" class="btn btn-danger" style="color:white;">Recusar</a>
+  </div>
+  <% }else if(user.profile.description == "purchases" && purchase.director_id == null && purchase.leader_id != null
+&& purchase.purchase_id == null && purchase.financial_id == null ) { %>
+
+  <% if(file == undefined) {%>
+
+  <form action="/accept/purchases/" method="post" enctype="multipart/form-data">
+    <input type="text" name="purchase_id" value="<%= purchase.id %>" hidden>
+    <hr>
+    <input type="file" name="files" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" multiple required />
+    <hr>
+    <button type="submit" class="btn btn-primary">Aceitar</button>
+  </form>
+
+  <% }else{%>
+
+  <form action="/accept/purchases/" method="post" enctype="multipart/form-data">
+    <input type="text" name="purchase_id" value="<%= purchase.id %>" hidden>
+    <hr>
+    <input type="file" name="files" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" multiple/>
+    <hr>
+    <button type="submit" class="btn btn-primary">Aceitar</button>
+  </form>
+
+  <% } %>
+
+
+  <% }else if(user.profile.description == "directors" && purchase.director_id == null && purchase.leader_id != null
+&& purchase.purchase_id != null && purchase.financial_id == null ) { %>
+
+  <div>
+    <a href="/accept/directors/<%= purchase.id %>" class="btn btn-primary">Aceitar</a>
+    <a href="/reprove/directors/<%= purchase.id %>" class="btn btn-danger" style="color:white;">Recusar</a>
+  </div>
+
+  <% }else if(user.profile.description == "financial" && purchase.director_id != null && purchase.leader_id != null
+&& purchase.purchase_id != null && purchase.financial_id == null ) { %>
+
+  <form action="/accept/fincancial" method="post" enctype="multipart/form-data">
+    <input type="text" name="purchase_id" value="<%= purchase.id %>" hidden>
+    <hr>
+    <input type="file" name="files" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" multiple required />
+    <hr>
+    <button type="submit" class="btn btn-primary">Aceitar</button>
+  </form>
+
+  <% } %>
+
+
+  <%- include('../partials/footer.ejs') %>
