--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -21,7 +21,8 @@
 #content {
   flex-grow: 1;
   padding: 20px;
-  margin-left: -250px;
+  margin-left: -230px;
+  margin-right: 20px;
 }
 .navbar {
   background-color: #535353;
