--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,14 +4,13 @@
 <head>
   <title>Compras</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./css/style.css">
-
-  <link rel="stylesheet" href="./css/sidebar.css">
+  <link rel="stylesheet" href="../../css/style.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -20,52 +19,58 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./css/sidebar.css">
+  <script src="https://cdn.datatables.net/2.0.2/js/dataTables.js"></script>
+  <script src="https://cdn.datatables.net/2.0.2/css/dataTables.dataTables.css"></script>
+  <link rel="stylesheet" href="../../css/estiloPagamentos.css">
+  <link rel="stylesheet" href="../../css/estiloCompras.css">
+  <link rel="stylesheet" href="../../css/sidebar.css">
 </head>
 
 <body>
 
-  <div class="wrapper d-flex align-items-stretch">
-    <nav id="sidebar">
-      <div class="custom-menu">
-        <button type="button" id="sidebarCollapse" class="btn btn-primary">
-          <i class="fa fa-bars"></i>
-          <span class="sr-only">Toggle Menu</span>
-        </button>
-      </div>
-      <a class="navbar-brand" href="#">
-        <img src="./images/logo_oficial_sf.png" alt="">
-      </a>
+  <body>
 
-      <ul class="list-unstyled components mb-5">
-        <li class="active">
-          <a href="/dashboard"><span class="fa fa-user mr-3"></span>
-            <%= user.employee.name %>
-          </a>
-        </li>
-        <li>
-          <a href="/dashboard"><span class="fa fa-home mr-3"></span> Dashboard</a>
-        </li>
-        <li>
-          <a href="/purchases"><span class="fa fa-sticky-note mr-3"></span>Compras/Serviços</a>
-        </li>
-        <li>
-          <a href="/payments"><span class="fa fa-sticky-note mr-3"></span>Pagamentos</a>
-        </li>
-        <li>
-          <a href="/registrations_token"><span class="fa fa-address-book mr-3"></span>Cadastro</a>
-        </li>
-        <li>
-          <a href="/users"><span class="fa fa-address-book mr-3""></span>Usuários</a>
+    <div class="wrapper d-flex align-items-stretch">
+      <nav id="sidebar">
+        <div class="custom-menu">
+          <button type="button" id="sidebarCollapse" class="btn btn-primary">
+            <i class="fa fa-bars"></i>
+            <span class="sr-only">Toggle Menu</span>
+          </button>
+        </div>
+        <a class="navbar-brand" href="#">
+          <img src="../images/logo_oficial_sf.png" alt="">
+        </a>
+
+        <ul class="list-unstyled components mb-5">
+          <li class="active">
+            <a href="/dashboard"><span class="fa fa-user mr-3"></span>
+              <%= user.employee.name %>
+            </a>
           </li>
           <li>
-            <a href=" /suppliers"><span class="fa fa-address-book mr-3""></span>Fornecedores</a>
+            <a href="/dashboard"><span class="fa fa-home mr-3"></span> Dashboard</a>
           </li>
           <li>
-            <a href=" /logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
-        </li>
-      </ul>
-    </nav>
+            <a href="/purchases"><span class="fa fa-sticky-note mr-3"></span>Compras/Serviços</a>
+          </li>
+          <li>
+            <a href="/payments"><span class="fa fa-sticky-note mr-3"></span>Pagamentos</a>
+          </li>
+          <li>
+            <a href="/registrations_token"><span class="fa fa-address-book mr-3"></span>Cadastro</a>
+          </li>
+          <li>
+            <a href="/users"><span class="fa fa-address-book mr-3""></span>Usuários</a>
+            </li>
+            <li>
+              <a href=" /suppliers"><span class="fa fa-address-book mr-3""></span>Fornecedores</a>
+            </li>
+            <li>
+              <a href=" /logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
+          </li>
+        </ul>
+      </nav>
 
-    <div id="content" class="p-4 p-md-5 pt-5">
-      <!-- Page Content  -->
+      <div id="content" class="p-4 p-md-5 pt-5">
+        <!-- Page Content  -->
