--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -69,7 +69,7 @@
           </th>
           <td>Pagamento</td>
           <td>
-            <%= payment.description %>
+            <%= payment.description.substring(0, 30) %>
           </td>
           <td>
             <%= formattedDate %>
